--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
   <div id="header">
     
       <tr>
-        <h1><a href="./HomePage.html">Rodrigo Araújo</a></h1>
+        <h1><a href="./index.html">Rodrigo Araújo</a></h1>
       </tr>
         <h4>Software Engineer & Computer Scientist</h4>
 
