--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
   <div id="header">
     
       <tr>
-        <h1><a href="./HomePage.html">Rodrigo Araújo</a></h1>
+        <h1><a href="./index.html">Rodrigo Araújo</a></h1>
       </tr>
         <h4>Software Engineer & Computer Scientist</h4>
 
