--- a/work.html
+++ b/work.html
@@ -120,7 +120,7 @@
       </p>
       <p>
         Worked developing medium size enterprise software systems with C#/ASP.net. Participated in 
-        analysis phase, modeling phase and development phase over Scrum metholody.
+        analysis phase, modeling phase and development phase over Scrum methodology.
       </p>
       <div class="spanpattern"></div>      
       <p><h1>Teaching Assitantship</h1></p>
