--- a/work.html
+++ b/work.html
@@ -104,7 +104,7 @@
         written in classic ASP <i>(HTML, asp code, sql code, javascript code... all in the same file, cool, ham?)</i>
       </p>
       <p>
-        Also, I worked on two big projects for the <b>Brazilian Government Policy</b>, which was a huge experience
+        Also, I worked on two big projects for the <b>Brazilian Government Police</b>, which was a huge experience
         dealing with complex and extremely large systems.
       </p>
 
