--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
     <p><h1>Research</h1></p>
     <p>-------------------------------------------------------------------------------------------</p>
       <p>
-        <h2>Research Scientist
+        <h2>Assistant Research Scientist
           <h3>
             at <a href="http://www.fapesb.ba.gov.br/#">FABESB</a>/<a href="http://dgp.cnpq.br/dgp/espelhogrupo/2178422134545563">Software Engineering and Applications Group (SEAG)</a>
             <h4>
