--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 
     <p>At the University, I'm a Teacher Assistant of a few classes such as Discrete Mathematics, Software Development and Algorithms, as i constantly advocate that <b style="font-family:'gothambold';">the only way to really learn something is to teach it</b>.</p>
 
-    <p>Actually I'm working as a researcher with the TDRT in a project of the University of Maryland Baltimore County, Federal University of Bahia, University of Salvador, SENAI-CIMATEC and the Fraunhofer Center for Experimental Software Engineering.</p>
+    <p>Actually I'm working as a researcher with the <a href="http://www.tdresearchteam.com/?page_id=11" target="_blank">TDRT</a> in a project of the University of Maryland Baltimore County, Federal University of Bahia, University of Salvador, SENAI-CIMATEC and the Fraunhofer Center for Experimental Software Engineering.</p>
 
     <p>As a Hobby, i really enjoy functional programming paradigm using Haskell, Knowledge Based Systems using OWL (Ontology Web Language), Algorithm Complexity Analysis and ways to improve its performance, a branch of the Artificial Intelligence known as Machine Learning, where I implement it using Java or Python, among others topics in Computer Science and its branches.</p>
 
