--- a/work.html
+++ b/work.html
@@ -69,7 +69,7 @@
       <p>
         <h2>Assistant Research Scientist
           <h3>
-            at <a href="http://www.fapesb.ba.gov.br/#">FABESB</a>/<a href="http://dgp.cnpq.br/dgp/espelhogrupo/2178422134545563">Software Engineering and Applications Group (SEAG)</a>
+            at <a href="http://www.fapesb.ba.gov.br/#">FABESB</a>/<a href="http://www.tdresearchteam.com/?page_id=11">Technical Debt Research Team (TDRT)</a>
             <h4>
               <font color="#E11F00">2014 - now</font>
             </h4>
