--- a/work.html
+++ b/work.html
@@ -42,10 +42,9 @@
 
     
     <tr>
-      <h4>-------------------------------------------------------------------------------------------------------------------------------</h4>
     </tr>
     <tr>
-      <h3>
+      <h3 style="padding-top:10px;">
         <!--<a href="./HomePage.html"><img src="./images/back.png" width="15"></a>
               <tr>
         <td>&nbsp;</td>
@@ -65,7 +64,7 @@
     
 
     <p><h1>Research</h1></p>
-    <p>-------------------------------------------------------------------------------------------</p>
+    <hr/>
       <p>
         <h2>Assistant Research Scientist
           <h3>
@@ -87,7 +86,7 @@
       <div class="spanpattern"></div>
 
     <p><h1>Industry</h1></p>
-    <p>-------------------------------------------------------------------------------------------</p>
+    <hr/>
       <p>
         <h2>Software Engineer (Internship) 
           <h3>
@@ -124,7 +123,7 @@
       </p>
       <div class="spanpattern"></div>      
       <p><h1>Teaching Assitantship</h1></p>
-      <p>-------------------------------------------------------------------------------------------</p>
+      <hr/>
       <p>
         <h2>Programming Language
           <h3>
