--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,9 @@
 
     
     <tr>
-      <h4>-------------------------------------------------------------------------------------------------------------------------------------------</h4>
     </tr>
     <tr>
-      <h3>
+      <h3 style="padding-top:10px;">
         <!--<a href="./HomePage.html"><img src="./images/back.png" width="15"></a>
               <tr>
         <td>&nbsp;</td>
