--- a/work.html
+++ b/work.html
@@ -76,6 +76,9 @@
         </h2>
       </p>
       <p>
+        Working in a project of the University of Maryland Baltimore County, Federal University of Bahia, University of Salvador, SENAI-CIMATEC and the Fraunhofer Center for Experimental Software Engineering.
+      </p>
+      <p>
         I'm currently researching about Software Engineering, Technical Debt, Artificial Intelligence (mostly on 
         Machine Learning) and Mathematical and Computational Ontology to build a software to collaboratively grow
         the knowledge about Technical Debt. It's been a huge challenge to work on it, mostly because it's very
