--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
 
 <div id="container"><!-- InstanceBeginEditable name="headerNav" -->
   <div id="header">
-    
+    <!-- comment -->
       <tr>
         <h1><a href="./index.html">Rodrigo Araújo</a></h1>
       </tr>
