--- a/work.html
+++ b/work.html
@@ -125,7 +125,7 @@
         analysis phase, modeling phase and development phase over Scrum methodology.
       </p>
       <div class="spanpattern"></div>      
-      <p><h1>Teaching Assitantship</h1></p>
+      <p><h1>Teaching Assistantship</h1></p>
       <hr/>
       <p>
         <h2>Programming Language
