--- a/_posts/2015-01-09-Making-Your-Machine-Think-Learn-And-Predict--Gradient-Descent-Algorithm-in-Java.html
+++ b/_posts/2015-01-09-Making-Your-Machine-Think-Learn-And-Predict--Gradient-Descent-Algorithm-in-Java.html
@@ -7,6 +7,10 @@ comments: true
 
 <html>
 
+        <meta name="description" content="Machine learning using Java, making your own gradient descent algorithm in java">
+        <meta name="keywords" content="Machine learning, java, algorithm, gradient descent, artificial intelligence">
+
+
 <h2>How can we make a machine learn from data?</h2>
 
 <p>Then, how can we make the machine predicts things based on that learned data? Those are the question answered by one of the most classic Machine Learning Algorithms, the <strong>Gradient Descent Algorithm</strong>, from a Mathematical-Statistical side it’s called <strong>Univariate Linear Regression</strong>.</p>
