--- a/_posts/2015-01-09-Making-Your-Machine-Think-Learn-And-Predict--Gradient-Descent-Algorithm-in-Java.html
+++ b/_posts/2015-01-09-Making-Your-Machine-Think-Learn-And-Predict--Gradient-Descent-Algorithm-in-Java.html
@@ -3,12 +3,11 @@ layout: blog_post
 title: Making your machine think, learn and predict - Gradient Descent Algorithm in Java
 excerpt: The first thought I had when I started to study Design Patterns was “damn, is all this really necessary?" I mean, so many patterns, so many details to do things that look simple to do without any further detailed thoughts. And I started to question myself if this was really a productive thing.
 comments: true
+desc: "Machine learning using Java, making your own gradient descent algorithm in java"
+keywords: "machine learning, artificial intelligence, algorithm, java"
 --- 
 
 <html>
-
-        <meta name="description" content="Machine learning using Java, making your own gradient descent algorithm in java">
-        <meta name="keywords" content="Machine learning, java, algorithm, gradient descent, artificial intelligence">
 
 
 <h2>How can we make a machine learn from data?</h2>
