added new keywords

--- a/_posts/2014-07-16-Object-Oriented-Thinking.html
+++ b/_posts/2014-07-16-Object-Oriented-Thinking.html
@@ -3,6 +3,8 @@ layout: blog_post
 title: Object Oriented Thinking
 excerpt: Let’s say that OO programming did never exist, so, i can say that any procedural programmer (C, fortran, cobol, etc..) who has a little notion about how to build organized codes, would, naturally, evolve to an organization that would look like the actual concept of OO programming.
 comments: true
+desc: "Simple introduction to object oriented thinking"
+keywords: "object, oriented, programming, design, engineering, software, java, OO"
 ---
 
 <html>
