--- a/_posts/2014-07-22-CRUD-with-Java,-JSP,-and-MySQL.html
+++ b/_posts/2014-07-22-CRUD-with-Java,-JSP,-and-MySQL.html
@@ -1,8 +1,10 @@
 ---
 layout: blog_post
 title: CRUD with Java, JSP and MySQL
-excerpt: One of the most common kind of application in today's tech/business is the CRUD system, that is the idea of the user interacting with a database, so the user can Create, Retrieve, Update and Delete data from a database. Also, learning how to create a CRUD with a language is a great way to understand the basics of this language, the basics of software design, engineering and architecture.
+excerpt: One of the most common kind of application in today's tech/business is the CRUD system, that is the idea of the user interacting with a database, so the user can Create, Retrieve, Update and Delete data from a database. Also, learning how to create a CRUD with a language is a great way to understand the basics of this language, the basics of software design, engineering and architecture.i
 comments: true
+desc: "Learn how to make a simple crud with java, mysql and JSP"
+keywords: "Java, mysql, jsp, jsf, crud, example, software, engineering, architecture, design"
 ---
 <p>One of the most common kind of applications in today's tech/business world is the CRUD system, that is the idea of the user interacting with a database, so the user can Create, Retrieve, Update and Delete <em>(yep, that awful name came from this)</em> data from this database. Also, <strong>learning how to create a CRUD with a language is a great way to understand the basics of this language, the basics of software design, engineering and architecture.</strong> In layman's term, a CRUD page is just a page where you can insert a thing, edit that thing, search that thing and delete that thing, just that!</p>
 &nbsp;
