--- a/_posts/2014-10-10-Fun-with-graphs-pt1.html
+++ b/_posts/2014-10-10-Fun-with-graphs-pt1.html
@@ -3,6 +3,8 @@ layout: blog_post
 title: Fun with graphs pt1
 excerpt: Graph Theory is definitely one of my favorite branches of the Mathematics & Computer Science, mostly because of its nearest infinity applications, in both real world problems and pure theoretical problems.
 comments: true
+desc: "Example of a few graph algorithms using pure java"
+keywords: "java, algorithm, graph, theory, dijkstra, theory, computer science, mathematics"
 ---
 
 <html>
