--- a/_posts/2014-10-31-Thoughts-on-Automata-Theory.html
+++ b/_posts/2014-10-31-Thoughts-on-Automata-Theory.html
@@ -3,6 +3,8 @@ layout: blog_post
 title: Thoughts on Automata Theory
 excerpt: I’ve been reading many texts on automata theory these times, and let me tell you, that’s such a wonderful thing. It pretty much explain how computers can…. compute! Simply put, Automata Theory deals with the logic of computation with respect to simple machines, referred to as Automata.
 comments: true
+desc: "A few thoughts and notes on automata theory"
+keywords: "automata, computer science, theory, complexity, science"
 --- 
 
 <html>
