--- a/_posts/2014-07-16-A-Romantic-Vision-Of-The-Software-Engineering.html
+++ b/_posts/2014-07-16-A-Romantic-Vision-Of-The-Software-Engineering.html
@@ -3,6 +3,8 @@ layout: blog_post
 title: A Romantic Vision Of The Software Engineering
 excerpt: Well, it all will start with your first steps on studying programming, a very innocent and and naive programming, i mean, your very first “Hello World” and the classics “Read 3 inputs and print the sum of them”, where your concerns will happen because of some missing commas, whitespaces and some misplaced IF’s… things that at first sight may cause a little confusion, you’ll start to think that’s even something hard.
 comments: true
+desc: "A personal view of the software engineering, how it's like to start at industry"
+keywords: "Software, Engineering, Industry, Romantic, View, Opinion, Internship, Begginer"
 ---
 <!--
 <p><em><strong> </strong>Or How Diving Into a Large Code Base Can Be Just Like Reading a Book With Unnumbered and Scrambled Pages.</em><p>-->
