--- a/_posts/2015-01-06-Why-How-and-Where-To-Learn-Design-Patterns.html
+++ b/_posts/2015-01-06-Why-How-and-Where-To-Learn-Design-Patterns.html
@@ -3,6 +3,8 @@ layout: blog_post
 title: Why, how and where to Learn Design Patterns
 excerpt: The first thought I had when I started to study Design Patterns was “damn, is all this really necessary?" I mean, so many patterns, so many details to do things that look simple to do without any further detailed thoughts. And I started to question myself if this was really a productive thing.
 comments: true
+desc: "Why should you learn design patterns and where to get some resources"
+keywords: "design pattern, patterns, software, architecture, design, engineering, science, computer"
 --- 
 
 <html>
