--- a/about/index.html
+++ b/about/index.html
@@ -16,3 +16,5 @@ layout: default
       If you have any cool idea and need someone to work with you or just wanna talk about it, feel free to
       email me at <b style="font-family:'gothambold';">contatodigo@hotmail.com</b>.
     </p>
+
+    <div style="height:10vh;"></div>
