--- a/contact/index.html
+++ b/contact/index.html
@@ -1,10 +1,12 @@
 ---
 layout: default
 ---
-
+<div style="height:100vh;">
 <p>
       You can email me at <b>contatodigo@hotmail.com</b>
     </p>
     <p>
       Or, if you prefer, just drop me a tweet at my <b><a href="http://www.twitter.com/digorithm">twitter</a></b>.
     </p>
+
+    </div>
