--- a/_posts/2015-03-31-using-python-and-AI-to-predict-types-of-wine.html
+++ b/_posts/2015-03-31-using-python-and-AI-to-predict-types-of-wine.html
@@ -2,8 +2,8 @@
 layout: blog_post                                                                           
 title: Using Python and AI to predict types of wine
 comments: true
-desc: ""
-keywords: ""
+desc: "Using python and machine learning to predict types of wine"
+keywords: "machine learning, computer science, artificial intelligence, scikit learn, sklearn, scipy, numpy, wine, programming, predict, prediction, classification, logistic regression, loss function"
 --- 
 
 <html>
