--- a/_posts/2015-04-22-Build-your-first-Rest-API-with-Python.html
+++ b/_posts/2015-04-22-Build-your-first-Rest-API-with-Python.html
@@ -1,15 +1,15 @@
 ---                                                                                         
 layout: blog_post                                                                           
 title: Building your first Rest API with python
-excerpt:
+excerpt: Are you total lost in this world full of jargons like API, Rest API, microservices and stuffs? Come here, sit, grab a cup of coffee, and let's talk briefly about it.
 comments: true
-desc: "Why should you learn design patterns and where to get some resources"
-keywords: "design pattern, patterns, software, architecture, design, engineering, science, computer"
+desc: "Let's talk about Rest API and try to create a simple API with python and flask"
+keywords: "API, patterns, software, architecture, design, engineering, science, computer, REST, RESTful, python"
 --- 
 
 <html>
 
-<p>Are you total lost in this world full of jargons like: API, Rest API, microservices and stuffs? Come here, sit, grab a cup of coffe, and let's talk briefly about it.</p>
+<p>Are you total lost in this world full of jargons like: API, Rest API, microservices and stuffs? Come here, sit, grab a cup of coffee, and let's talk briefly about it.</p>
 
 <p>Today a lot is said about APIs. Everything has an API, every programmer (newbie to expert) uses tons of API. Also, today we can see a lot of people talking about microservices and the idea of total separation of backend, frontend, web services or <em>whatever</em>. So we can <em>(and we do)</em> hear a lot about REST/RESTful APIs. We have 3 current problems with it:</p>
 
