--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@ p{
 }
 
 </style>
-
+<div style="height:100vh">
 <p>Hey, guys! I'm a <em>Computer Science Student</em>, <img src="../images/me.gif" width="200" height="200" align="right" style="padding-top:5px;" /> I'm the current President of the Academic Directory of Computer Science at Salvador University (A Brazilian university), I'm extremely interested in <i>Software Engineering, Artificial Intelligence and Security</i>. Since I was young I have a passion for mathematics and technology, so i, undoubtely, took this path and never looked back <i>(still happy about it, by the way)</i>.</p>
 
         <p>I created some community activities for digital inclusion, I write on a few blogs about Mathematics, Computer Science and Software Development, I'm motivated by the <strong>distribution of the scientific and technological knowledge.</strong></p>
@@ -25,4 +25,4 @@ p{
       email me at <b style="font-family:'gothambold';">contatodigo at hotmail.com</b>.
     </p>
 
-    <div style="height:10vh;"></div>
+    </div>
