--- a/about/index.html
+++ b/about/index.html
@@ -17,16 +17,12 @@ keywords: "Rodrigo, Araujo, Software, Engineer, Computer, Scientist, Bahia, Braz
 <article class="home">
 <h3>Overview</h3>
 <p>
-Hey, guys! I'm a BSc in <em>Computer Science</em> , I'm the current President of the Computer Science Students' Union at my University, I'm extremely interested in <i>Software Engineering, Artificial Intelligence and Security</i>. Since I was young I have a passion for Mathematics and Technology, so I, undoubtely, took this path and never looked back <i>(still happy about it, by the way)</i>.
+Hey, guys! I'm a Computer Scientist and Software Engineer, I'm extremely interested in Software Engineering, Artificial Intelligence and Security. Since I was young I have a passion for Mathematics and Technology, so I, undoubtedly, took this path and never looked back (still happy about it, by the way).
 </p>
 
 <p>
-    Currently I'm a Engineer at <a href="http://www.jusbrasil.com.br/" target="_blank">JusBrasil</a>, working with Artificial Intelligence/Machine Learning.
+    Currently I'm an Engineer at <a href="http://www.jusbrasil.com.br/" target="_blank">JusBrasil</a>, working with Artificial Intelligence/Machine Learning.
 </p>
-<p>
-    Also I'm working as a Researcher with the <a href="http://www.tdresearchteam.com/?page_id=11" target="_blank">TDRT</a> in a few projects of the University of Maryland Baltimore County, Federal University of Bahia, University of Salvador, SENAI-CIMATEC and the Fraunhofer Center for Experimental Software Engineering.
-</p>
-
 
 
 &nbsp;
@@ -41,11 +37,11 @@ Hey, guys! I'm a BSc in <em>Computer Science</em> , I'm the current President of
 <p>
 Currently my main work/research field is <strong><em>Artificial Intelligence</em></strong> and <strong><em>Machine Learning</em></strong>, but I'm also interested in:
 
-<p>1. <em><strong>Distributed Systems and scalability</strong></em>, why and how to scale big systems? I'm an eternal curious about the CAP Theorem, Byzantine Generals' Problem, Fault Tolerant Systems and more.</p>
+<p>1. <em><strong>Distributed Systems and Scalability</strong></em></p>
 
-<p>2. <em><strong>Software Architecture</strong></em>, again, why and how to scale big systems? But how to do that keeping in mind the DevOps process, maintainability, performance and elegance? When to use Microservices, when to NOT use this strategy? Start with a Monolith and them, break it into Microservices? Or start thinking about the separation of Concerns/Domains from beginning?</p>
+<p>2. <em><strong>Software Architecture and Engineering</strong></em></p>
 
-<p>3. <em><strong>Security</strong></em>, I'm a curious about the best practices of Hacking and Systems Security, even more when it's about Internet of Things.</p>
+<p>3. <em><strong>Security</strong></em></p>
 </p>
 
 &nbsp;
@@ -61,7 +57,7 @@ Currently my main work/research field is <strong><em>Artificial Intelligence</em
         2. Reading and thinking about <em>Theoretical Computer Science</em>, I don't pass a good and deep talk about it, the limits of computation is something that really intrigues me. 
     </p>
     <p>
-        3. Learning more about the many Programming Languages out there. I try to keep myself unattached to specific Technologies, but I do have preferences, such as Python, C and the realm of Functional Programming <em>(I have a thing for Haskell and Scala)</em>
+        3. Learning more about the many Programming Languages out there. I try to keep myself unattached to specific Technologies, but I do have preferences, such as Python, C and the realm of Functional Programming <em>(I have a thing for Haskell, Scala and Clojure)</em>
     </p>
 
 </p>
