--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Rodrigo Araújo 
-subtitle: Thoughts and stories on Computer Science, Mathematics and Technnology
+subtitle: Thoughts and stories on Computer Science, Mathematics and Technology
 ---
 
 <div class="posts-list">
